Component templates.
Original Pull Request #2534
Closes #1458